--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "build": "vite build"
   },
   "dependencies": {
-    "vue": "^3.0.4"
+    "@popperjs/core": "^2.6.0",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.0-beta2",
+    "vue": "^3.0.4",
+    "vue-router": "^4.0.3"
   },
   "devDependencies": {
     "vite": "^1.0.0-rc.13",
